fixed mobile view overflow

--- a/css/style(abt-me).css
+++ b/css/style(abt-me).css
@@ -151,7 +151,6 @@ h2 {
 }
 
 .box {
-    min-width: 450px;
     position: relative;
     max-width: 840px;
     border-radius: 50px;
@@ -236,8 +235,8 @@ a:hover {
     }
 
     img {
-        height: 200px;
-        margin-top: -150px;
+        height: 160px;
+        margin-top: -120px;
     }
 
     #basics h2 {
@@ -245,19 +244,27 @@ a:hover {
     }
 
     #basics p {
-        font-size: 1.5rem;
+        font-size: 1.4rem;
     }
 
     #fun-facts h3 {
-        font-size: 1.8rem;
-    }
-
-    #fun-facts p {
         font-size: 1.6rem;
     }
 
+    #fun-facts p {
+        font-size: 1.4rem;
+    }
+
+    #skills, #databases {
+        margin-bottom: 26px;
+    }
+
+    .box {
+        padding: 40px 30px;
+    }
+
     .box h2 {
-        font-size: 2.3rem;
+        font-size: 2rem;
     }
 
     #container {
@@ -267,15 +274,15 @@ a:hover {
     }
 
     #container .teal-text, #container .pink-text {
-        font-size: 1.8rem;
+        font-size: 1.6rem;
     }
 
     #container ul li {
-        font-size: 1.8rem;
+        font-size: 1.4rem;
     }
 
     #contact-info {
-        font-size: 1.6rem;
+        font-size: 1.3rem;
     }
 }
 
@@ -291,7 +298,7 @@ a:hover {
 
     #menu_icon {
         display: block;
-        margin-right: 60px;
+        margin-right: 50px;
         color: #ffffff;
     }
 
@@ -309,12 +316,13 @@ a:hover {
         width: 100%;
         z-index: 10;
         position: fixed;
-        top: 100px;
+        top: 90px;
     }
 
     .active a {
-        padding: 40px 0;
-        font-size: 40px !important;
+        margin-bottom: 80px;
+        padding: 10px;
+        font-size: 36px !important;
         font-weight: 600;
         margin-right: 0 !important;
     }
