--- a/css/style(projects).css
+++ b/css/style(projects).css
@@ -116,7 +116,6 @@ a {
 .project {
     margin: 45px auto 0px auto;
     max-width: 780px;
-    min-width: 500px;
     height: auto;
     border: 3px solid #222222;
     border-radius: 50px;
@@ -248,7 +247,7 @@ button {
     }
 
     #header {
-        font-size: 1.7rem;
+        font-size: 1.2rem;
     }
 
     .project {
@@ -256,18 +255,18 @@ button {
     }
 
     .project h2 {
-        font-size: 2.3rem;
+        font-size: 1.8rem;
         text-align: center;
     }
 
     .project h3 {
-        font-size: 1.8rem;
+        font-size: 1.4rem;
         margin-top: 40px;
         margin-bottom: 20px;
     }
 
     .project p {
-        font-size: 1.6rem;
+        font-size: 1.2rem;
         text-align: justify;
     }
 
@@ -276,8 +275,8 @@ button {
     }
 
     .teal-try-button, .pink-try-button {
-        font-size: 2rem;
-        padding: 26px;
+        font-size: 1.6rem;
+        padding: 24px;
         border-radius: 14px;
     }
 
@@ -287,12 +286,12 @@ button {
     }
 
     #github h2 {
-        font-size: 2rem;
+        font-size: 1.8rem;
     }
 
     #link {
-        height: 110px;
-        width: 270px;
+        height: 100px;
+        width: 250px;
         border-radius: 20px;
         margin-top: 46px;
     }
@@ -306,27 +305,27 @@ button {
     }
 
     #link p {
-        font-size: 2rem;
+        font-size: 1.8rem;
     }
 
     #footer p {
-        font-size: 1.4rem;
+        font-size: 1.2rem;
     }
 }
 
 /* Navigation bar phone view */
 @media only screen and (max-width: 900px) {
     #nav-bar {
-        height: 100px;
+        height: 90px;
     }
 
     #homepage_btn a {
-        font-size: 34px;
+        font-size: 32px;
     }
 
     #menu_icon {
         display: block;
-        margin-right: 60px;
+        margin-right: 50px;
         color: #ffffff;
     }
 
@@ -344,12 +343,13 @@ button {
         width: 100%;
         z-index: 10;
         position: fixed;
-        top: 100px;
+        top: 90px;
     }
 
     .active a {
-        padding: 40px 0;
-        font-size: 40px !important;
+        margin-bottom: 80px;
+        padding: 10px;
+        font-size: 36px !important;
         font-weight: 600;
         margin-right: 0 !important;
     }
